# compose-lint

./: .dockerignore  .gitignore  .mailmap  .pre-commit-hooks.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  LICENSE-corpus.md  MAINTAINERS.md  README.md  SECURITY.md  action.yml  pyproject.toml  renovate.json
.clusterfuzzlite/: Dockerfile  build.sh
.githooks/: pre-push
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  SECURITY.md  allowed_signers  dependabot.yml  pull_request_template.md  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  rule_proposal.yml
.github/actions/update-dockerhub-description/: action.yml
.github/workflows/: cflite-batch.yml  cflite-pr.yml  ci.yml  codeql.yml  docker-publish.yml  dockerhub-description.yml  marketplace-smoke.yml  publish-channel.yml  publish.yml  release-prep.yml  release.yml  scorecard.yml  scout-scan.yml
.vex/: compose-lint.openvex.json
docs/: ASSURANCE.md  CI.md  CONTINUITY.md  DISTRIBUTION.md  RELEASING.md  ROADMAP.md  SECURITY-EXPECTATIONS.md  compatibility.md  configuration.md  dynamic-testing.md  hardening.md  mutation-testing.md  profiles.md  rule-comparison.md  severity.md  state-of-compose.md
docs/adr/: 001-python.md  002-rule-grounding.md  003-yaml-parsing.md  004-rule-architecture.md  005-rule-id-scheme.md  006-exit-codes.md  007-shellcheck-integration.md  008-linux-packages.md  009-runtime-base-image.md  010-per-service-rule-overrides.md  011-config-bootstrap-ux.md  012-vex-product-identifier.md  013-missing-services-key.md  014-fix-remediation.md  015-machine-readable-output-contract.md  016-runtime-rule-premise-validation.md  017-security-profile-catalog.md  018-confidence-as-multi-axis.md
docs/publishing/: README.md  state-of-compose-devto.md  state-of-compose-hashnode.md
docs/rules/: CL-0001.md  CL-0002.md  CL-0003.md  CL-0004.md  CL-0005.md  CL-0006.md  CL-0007.md  CL-0008.md  CL-0009.md  CL-0010.md  CL-0011.md  CL-0012.md  CL-0013.md  CL-0014.md  CL-0015.md  CL-0016.md  CL-0017.md  CL-0018.md  CL-0019.md  CL-0020.md  CL-0021.md  CL-0022.md  CL-0023.md
fuzz/: fuzz_compose.py
scripts/: bump-version.sh  snapshot.py  update-dockerhub-description.sh  validate_profiles.py  validate_rule_premises.py  verify-dockerfile-digests.sh
scripts/corpus/: README.md  _common.py  backfill_tier.py  charts.py  docker_config_gate.py  enrich_metadata.py  fetch.py  fetch_canonical.py  fetch_popular.py  fetch_selfhosted.py  fix_gate.py  make_tier_summary.py  retier.py  run.py
scripts/demo/: Dockerfile  README.md  demo.tape  docker-compose.yml  render.sh  requirements.in  retime.py
src/compose_lint/: __init__.py  __main__.py  _yaml_edit.py  cli.py  config.py  config_emit.py  engine.py  explain.py  fix.py  models.py  parser.py
src/compose_lint/formatters/: __init__.py  json.py  sarif.py  text.py
src/compose_lint/profiles/: __init__.py  enrich.py  loader.py  models.py  refs.py
src/compose_lint/profiles/catalog/: README.md
src/compose_lint/profiles/schema/: profile.schema.json
src/compose_lint/rules/: CL0001_docker_socket.py  CL0002_privileged_mode.py  CL0003_no_new_privileges.py  CL0004_image_not_pinned.py  CL0005_unbound_ports.py  CL0006_cap_drop.py  CL0007_read_only.py  CL0008_host_network.py  CL0009_security_profile.py  CL0010_host_namespace.py  CL0011_dangerous_cap_add.py  CL0012_pids_limit.py  CL0013_sensitive_mount.py  CL0014_logging_disabled.py  CL0015_healthcheck_disabled.py  CL0016_dangerous_devices.py  CL0017_shared_mount.py  CL0018_explicit_root.py  CL0019_image_no_digest.py  CL0020_credential_env_keys.py  CL0021_connection_string_credentials.py  CL0022_tmpfs_hardening.py  CL0022_tmpfs_insecure_options.py  CL0023_dangerous_sysctls.py  __init__.py  _image.py
tests/: test_CL0001.py  test_CL0002.py  test_CL0003.py  test_CL0004.py  test_CL0005.py  test_CL0006.py  test_CL0007.py  test_CL0008.py  test_CL0009.py  test_CL0010.py  test_CL0011.py  test_CL0012.py  test_CL0013.py  test_CL0014.py  test_CL0015.py  test_CL0016.py  test_CL0017.py  test_CL0018.py  test_CL0019.py  test_CL0020.py  test_CL0021.py  test_CL0022.py  test_CL0023.py  test_cli.py  test_config.py  test_config_emit.py  test_config_profiles.py  test_corpus_fetch_url.py  test_corpus_fix.py  test_corpus_snapshot.py  test_corpus_snapshot_schema.py  test_demo_fixture.py  test_engine.py  test_fix.py  test_fixture_coverage.py  test_image_ref.py  test_integration.py  test_json.py  test_kics_comparison.py  test_parser.py  (+11 more)
tests/compose_files/: fragment_volumes_only.yml  insecure_cap_add.yml  insecure_cap_drop.yml  insecure_connection_string_creds.yml  insecure_credential_env.yml  insecure_devices.yml  insecure_healthcheck.yml  insecure_host_namespace.yml  insecure_host_network.yml  insecure_image_no_digest.yml  insecure_image_tags.yml  insecure_logging.yml  insecure_no_new_priv.yml  insecure_pids_limit.yml  insecure_ports.yml  insecure_privileged.yml  insecure_read_only.yml  insecure_root_user.yml  insecure_security_profile.yml  insecure_sensitive_mount.yml  insecure_shared_mount.yml  insecure_socket.yml  invalid_complex_key.yml  invalid_no_services.yml  invalid_service_not_mapping.yml  invalid_services_not_mapping.yml  invalid_yaml.yml  kics_comparison.yml  legacy_v1_compose.yml  mixed.yml  safe_cap_hardened.yml  safe_healthcheck_cmd_shell.yml  safe_named_volume_propagation.yml  safe_no_new_priv_short.yml  safe_self_hosted.yml  suppress_config.yml  valid_anchors.yml  valid_anchors_seq_merge.yml  valid_basic.yml  valid_env_interpolation.yml  (+2 more)
tests/fixtures/profile_validation/good/profiles/workloads/: postgres.sh
tests/fixtures/profiles/: postgres.example.yml
tests/fixtures/profiles/catalog/lscr.io/linuxserver/: radarr.yml
tests/smoke/: clean.yml  insecure.yml  sarif-shape.yml
