[build-system]
requires = ["hatchling>=1.29.0"]
build-backend = "hatchling.build"

[project]
name = "compose-lint"
version = "0.1.0"
description = "A security-focused linter for Docker Compose files"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Todd Matens" }]
keywords = ["docker", "docker-compose", "security", "linter", "devops", "devsecops"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "pyyaml>=6.0.2,<7",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.15.9",
    "mypy>=1.20.0",
    "pytest>=9.0.2",
    "types-pyyaml>=6.0.12",
]

[project.scripts]
compose-lint = "compose_lint.cli:main"

[project.urls]
Homepage = "https://github.com/tmatens/compose-lint"
Documentation = "https://github.com/tmatens/compose-lint/tree/main/docs"
Issues = "https://github.com/tmatens/compose-lint/issues"
Changelog = "https://github.com/tmatens/compose-lint/blob/main/CHANGELOG.md"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
strict = true

[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
]

[tool.hatch.build.targets.sdist]
exclude = [
    "CLAUDE.md",
    ".claude/",
]

[tool.hatch.build.targets.wheel]
exclude = [
    "CLAUDE.md",
    ".claude/",
]
