[build-system]
requires = ["hatchling>=1.29.0"]
build-backend = "hatchling.build"

[project]
name = "compose-lint"
version = "0.3.0"
description = "A security-focused linter for Docker Compose files"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Todd Matens" }]
keywords = ["docker", "docker-compose", "security", "linter", "devops", "devsecops"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "pyyaml>=6.0.2,<7",
]

[project.optional-dependencies]
# Focused extras groups exist so Dependabot can track the exact pins
# (workflow-inline `pip install X==Y` lines aren't scanned). Each
# extras group maps to one CI job; `dev` is the umbrella developers
# install locally. Every pin in every group is exact (`==`) — per
# AGENTS.md "Dependency pinning → CI tool installs" and
# "Development dependencies" — and Dependabot's weekly pass bumps
# them.
lint = [
    "ruff==0.15.10",
]
security = [
    "bandit==1.9.4",
    "pip-audit==2.10.0",
]
publish = [
    "build==1.4.3",
    "twine==6.2.0",
]
dev = [
    # Self-reference so the ruff pin lives only in [lint]; no drift.
    "compose-lint[lint]",
    "mypy==1.20.0",
    "pytest==9.0.3",
    "types-pyyaml==6.0.12.20260408",
]

[project.scripts]
compose-lint = "compose_lint.cli:main"

[project.urls]
Homepage = "https://github.com/tmatens/compose-lint"
Documentation = "https://github.com/tmatens/compose-lint/tree/main/docs"
Issues = "https://github.com/tmatens/compose-lint/issues"
Changelog = "https://github.com/tmatens/compose-lint/blob/main/CHANGELOG.md"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
strict = true

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
]

[tool.hatch.build.targets.sdist]
exclude = [
    "AGENTS.md",
    "CLAUDE.md",
    ".claude/",
    "fuzz/",
    ".clusterfuzzlite/",
    "requirements.lock",
    "requirements-dev.lock",
    "Dockerfile",
    ".dockerignore",
]

[tool.hatch.build.targets.wheel]
exclude = [
    "AGENTS.md",
    "CLAUDE.md",
    ".claude/",
    "fuzz/",
    ".clusterfuzzlite/",
    "requirements.lock",
    "requirements-dev.lock",
    "Dockerfile",
    ".dockerignore",
]
