[build-system]
requires = ["hatchling>=1.29.0"]
build-backend = "hatchling.build"

[project]
name = "compose-lint"
version = "0.7.0"
description = "Static-analysis linter for Docker Compose files. Finds insecure container configuration with OWASP/CIS-grounded rules; emits SARIF for GitHub Code Scanning."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Todd Matens" }]
keywords = [
    "docker",
    "docker-compose",
    "compose",
    "security",
    "linter",
    "static-analysis",
    "iac-security",
    "sarif",
    "owasp",
    "cis-benchmark",
    "devsecops",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "pyyaml>=6.0.2,<7",
]

[project.optional-dependencies]
# Focused extras groups exist so Dependabot can track the exact pins
# (workflow-inline `pip install X==Y` lines aren't scanned). Each
# extras group maps to one CI job; `dev` is the umbrella developers
# install locally. Every pin in every group is exact (`==`) — per
# AGENTS.md "Dependency pinning → CI tool installs" and
# "Development dependencies" — and Dependabot's weekly pass bumps
# them.
lint = [
    "ruff==0.15.11",
]
security = [
    "bandit==1.9.4",
    "pip-audit==2.10.0",
]
publish = [
    "build==1.4.3",
    "twine==6.2.0",
    # Used by the post-release canary in publish.yml to verify the
    # Sigstore bundles attached to the GitHub Release. Matches the
    # version bundled by sigstore/gh-action-sigstore-python v3.3.0 so
    # the signer and verifier are in lockstep.
    "sigstore==4.2.0",
]
# Minimal build-tool set for the Dockerfile build stage. Kept narrow so
# the generated requirements-build.lock hash-pins only what's needed to
# invoke `python -m build`, without pulling in pytest/ruff/mypy/etc.
container = [
    "build==1.4.3",
]
dev = [
    # Self-reference so the ruff pin lives only in [lint]; no drift.
    "compose-lint[lint]",
    "check-jsonschema==0.37.1",
    "mutmut==3.5.0",
    "mypy==1.20.1",
    "pytest==9.0.3",
    "types-pyyaml==6.0.12.20260408",
]

[project.scripts]
compose-lint = "compose_lint.cli:main"

[project.urls]
Homepage = "https://github.com/tmatens/compose-lint"
Source = "https://github.com/tmatens/compose-lint"
Documentation = "https://github.com/tmatens/compose-lint/tree/main/docs"
Issues = "https://github.com/tmatens/compose-lint/issues"
Changelog = "https://github.com/tmatens/compose-lint/blob/main/CHANGELOG.md"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mutmut]
# Mutate the security-critical surface only: rule predicates and the shared
# image-reference helper. Formatters and the parser are excluded — formatter
# output is covered by snapshot tests (mutation noise drowns the signal),
# and YAML parser invariants are better tested with property-based tools
# than mutation. Re-evaluate as engine/config logic stabilises.
paths_to_mutate = [
    "src/compose_lint/rules/",
    "src/compose_lint/_image.py",
]
# Copy the rest of the package so the mutated rules can import from it.
also_copy = [
    "src/compose_lint/",
]

[tool.mypy]
strict = true

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
]

[tool.hatch.build.targets.sdist]
exclude = [
    "AGENTS.md",
    "CLAUDE.md",
    ".claude/",
    "fuzz/",
    ".clusterfuzzlite/",
    "requirements.lock",
    "requirements-dev.lock",
    "Dockerfile",
    ".dockerignore",
]

[tool.hatch.build.targets.wheel]
exclude = [
    "AGENTS.md",
    "CLAUDE.md",
    ".claude/",
    "fuzz/",
    ".clusterfuzzlite/",
    "requirements.lock",
    "requirements-dev.lock",
    "Dockerfile",
    ".dockerignore",
]

# Ship the per-rule markdown docs inside the wheel so `--explain CL-XXXX`
# can read them at runtime. Single source of truth remains `docs/rules/`;
# the force-include maps that directory into the installed package.
[tool.hatch.build.targets.wheel.force-include]
"docs/rules" = "compose_lint/rule_docs"
